--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,8 @@ dependencies = [
     "azure-identity>=1.25.1",
     "azure-keyvault-secrets>=4.10.0",
     "boto3>=1.42.11",
-    "eventsourcing>=9.4.6",
+    "eventsourcing>=9.5.3",
+    "eventsourcing-sqlalchemy>=0.15",
     "fastapi>=0.124.4",
     "google-cloud-secret-manager>=2.25.0",
     "opentelemetry-exporter-otlp-proto-http>=1.39.1",
