--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "asyncpg>=0.31.0",
     "azure-identity>=1.25.1",
     "azure-keyvault-secrets>=4.10.0",
     "boto3>=1.42.11",
@@ -12,6 +13,7 @@ dependencies = [
     "eventsourcing-sqlalchemy>=0.15",
     "fastapi>=0.124.4",
     "google-cloud-secret-manager>=2.25.0",
+    "granian[reload,uvloop]>=2.7.2",
     "opentelemetry-exporter-otlp-proto-http>=1.39.1",
     "opentelemetry-sdk>=1.39.1",
     "orjson>=3.11.5",
@@ -19,6 +21,8 @@ dependencies = [
     "pydantic-extra-types[pendulum]>=2.10.6",
     "pydantic-settings>=2.12.0",
     "rich>=14.2.0",
+    "sqlalchemy[asyncio]>=2.0.46",
+    "sqlmodel>=0.0.37",
     "structlog>=25.5.0",
 ]
 
